# manifold

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  main.rs  util.rs
src/data/csv/: bindmnemonic.csv  builtins.csv  jump_instr.csv  reg_x64.csv
src/data/json/: clight_schema.json  excluded_symbols.json  extern.json  header_functions.json  skip_functions.json
src/debug/: clight_export.rs  dataflow_dump.rs  debug_dump.rs  ir_dump.rs  lost_dump.rs  mod.rs  pipeline_dot.rs
src/decompile/: elevator.rs  mod.rs
src/decompile/analysis/: canary_vla_pass.rs  closed_form_switch_pass.rs  global_array_pass.rs  mod.rs  ptr_to_pass.rs  rtl_opt_pass.rs  rtl_variable.rs  signature_pass.rs  stack_pass.rs  struct_recovery_pass.rs  structuring_pass.rs  type_pass.rs
src/decompile/disassembly/: block.rs  cfg.rs  function.rs  instruction.rs  mod.rs  operand.rs  symbol.rs
src/decompile/passes/: abi_pass.rs  asm_pass.rs  clight_emit_pass.rs  clight_pass.rs  cminor_pass.rs  csh_pass.rs  cshminor_pass.rs  goto_reduce_pass.rs  linear_pass.rs  mach_pass.rs  mod.rs  pass.rs  rtl_optimize_pass.rs  rtl_pass.rs  rtl_variable.rs
src/decompile/postselect/: forloop.rs  mod.rs  var_reduce.rs
src/x86/: abi.rs  asm.rs  mach.rs  mod.rs  op.rs  registers.rs  types.rs
tests/: corpus.rs  libclangtest.rs  pipeline.rs
tests/source/abi_edges/: input.c  test.rs
tests/source/arithmetic/: input.c  test.rs
tests/source/call_patterns/: input.c  test.rs
tests/source/closed_form_switch/: input.c  test.rs
tests/source/control_edges/: input.c  test.rs
(+64 files in other folders)
