[package]
name = "manifold"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
ascent = { path = "./ascent-plusplus/ascent", features = ["par"], default-features = true}
ascent-byods-rels = { path = "./ascent-plusplus/byods/ascent-byods-rels", features = ["par"] }
csv = "1.3.1"
either = "1.13.0"
strum = "0.27.1"
strum_macros = "0.27.1"
regex = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4.21"
capstone = "0.13.0"
object = "0.38.1"
rayon = "1.10"
smallvec = "1.13"
clang-sys = { version = "1", features = ["runtime"] }
rand = { version = "0.8", features = ["small_rng"] }

[features]
par = ["ascent/par"]

[profile.dev]
opt-level = 0
codegen-units = 256
debug = 0
incremental = true

[profile.speed]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = 0
